# serializer version: 1
# name: TestApplyOTFToImage.test_apply_otf_to_image[ref_img0-1.0-1.0-otf_value0-1.0-1.0]
  tuple(
    array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    array([[1.]]),
  )
# ---
# name: TestCTEOTF.test_otf[u0-v0-0.0-0.0-1.0-1.0-1-1.0-1.0]
  array([1.])
# ---
# name: TestCTEOTF.test_otf[u1-v1-1.0-1.0-0.0-0.0-0-1.0-1.0]
  array([1.])
# ---
# name: TestCTEOTF.test_otf[u2-v2-0.0-1.0-1.0-2.0-2-2.0-2.0]
  array([2980.95798704])
# ---
# name: TestCTEOTF.test_otf[u3-v3-1.0-1.0-1.0-1.0-1-1.0-1.0]
  array([1.])
# ---
# name: TestCTEOTF.test_otf[u4-v4-1.0-1.0-1.0-1.0-1-1.0-1.0]
  array([1., 1.])
# ---
# name: TestCircularApertureOTF.test[u0-v0-1.0-0.0-0.0]
  array([0.])
# ---
# name: TestCircularApertureOTF.test[u1-v1-1.0-1.0-0.0]
  array([0.])
# ---
# name: TestCircularApertureOTF.test[u2-v2-1.0-1.0-0.0]
  array([0., 0.])
# ---
# name: TestCircularApertureOTF.test[u3-v3-1.0-1.0-0.5]
  array([0., 0.])
# ---
# name: TestCircularApertureOTFWithDefocus.test[u0-v0-1.0-1.0-0.0-0.0]
  array([0.])
# ---
# name: TestCircularApertureOTFWithDefocus.test[u1-v1-1.0-1.0-0.0-0.0]
  array([0., 0.])
# ---
# name: TestCircularApertureOTFWithDefocus.test[u2-v2-1.0-1.0-0.5-0.0]
  array([0., 0.])
# ---
# name: TestDefocusOTF.test_otf[u0-v0-0.0-1.0]
  array([0.08480497])
# ---
# name: TestDefocusOTF.test_otf[u1-v1-2.0-1.0]
  array([4.38638338e-06])
# ---
# name: TestDefocusOTF.test_otf[u2-v2-1.0-1.0]
  array([0.00719188])
# ---
# name: TestDefocusOTF.test_otf[u3-v3-1.0-1.0]
  array([0.00719188, 0.00719188])
# ---
# name: TestDetectorOTF.test[u0-v0-0.0-0.0-1.0]
  array([1.])
# ---
# name: TestDetectorOTF.test[u1-v1-1.0-0.0-1.0]
  array([3.89817183e-17])
# ---
# name: TestDetectorOTF.test[u2-v2-0.0-1.0-1.0]
  array([3.89817183e-17])
# ---
# name: TestDetectorOTF.test[u3-v3-1.0-1.0-1.0]
  array([1.51957436e-33])
# ---
# name: TestDetectorOTF.test[u4-v4-1.0-1.0-1.0]
  array([1.51957436e-33, 1.51957436e-33])
# ---
# name: TestDetectorOTFWithAggregation.test[u0-v0-0.0-0.0-1.0-1.0-1.0-1]
  array([1.])
# ---
# name: TestDetectorOTFWithAggregation.test[u1-v1-1.0-0.0-1.0-0.0-1.0-1]
  array([3.89817183e-17])
# ---
# name: TestDetectorOTFWithAggregation.test[u2-v2-0.0-1.0-0.0-1.0-1.0-1]
  array([3.89817183e-17])
# ---
# name: TestDetectorOTFWithAggregation.test[u3-v3-1.0-1.0-1.0-1.0-1.0-1]
  array([1.51957436e-33])
# ---
# name: TestDetectorOTFWithAggregation.test[u4-v4-1.0-1.0-1.0-1.0-1.0-2]
  array([1.51957436e-33, 1.51957436e-33])
# ---
# name: TestDiffusionOTF.test[u0-v0-alpha0-ald0-al00-1.0]
  array([0.20116963])
# ---
# name: TestDiffusionOTF.test[u1-v1-alpha1-ald1-al01-2.0]
  array([0.85576647])
# ---
# name: TestDiffusionOTF.test[u2-v2-alpha2-ald2-al02-1.0]
  array([0.8199439, 0.8199439])
# ---
# name: TestDriftOTF.test[u0-v0-0.0-0.0]
  array([1.])
# ---
# name: TestDriftOTF.test[u1-v1-1.0-0.07]
  array([3.86682777e-17])
# ---
# name: TestDriftOTF.test[u2-v2-0.0-1.07]
  array([-0.06489453])
# ---
# name: TestDriftOTF.test[u3-v3-1.0-1.03]
  array([-1.13370972e-18])
# ---
# name: TestDriftOTF.test[u4-v4-1.0-1.0]
  array([1.51957436e-33, 1.51957436e-33])
# ---
# name: TestFilterOTF.test[u0-v0-kernel0-1.0]
  array([1.])
# ---
# name: TestFilterOTF.test[u1-v1-kernel1-10.0]
  array([0.99975328])
# ---
# name: TestFilterOTF.test[u2-v2-kernel2-1.0]
  array([1., 1.])
# ---
# name: TestGaussianOTF.test[u0-v0-1.0-1.0]
  array([0.00186744])
# ---
# name: TestGaussianOTF.test[u1-v1-1.0-2.0]
  array([1.50701728e-07])
# ---
# name: TestGaussianOTF.test[u2-v2-2.0-2.0]
  array([1.21615567e-11, 1.21615567e-11])
# ---
# name: TestJitterOTF.test[u0-v0-0.0-0.0]
  array([1.])
# ---
# name: TestJitterOTF.test[u1-v1-1.0-0.0]
  array([2.67528799e-09])
# ---
# name: TestJitterOTF.test[u2-v2-0.0-1.0]
  array([2.67528799e-09])
# ---
# name: TestJitterOTF.test[u3-v3-1.0-1.0]
  array([7.15716584e-18])
# ---
# name: TestJitterOTF.test[u4-v4-1.0-1.0]
  array([7.15716584e-18, 7.15716584e-18])
# ---
# name: TestOTFHelper.test_coherence_diameter[1.0-z_path0-cn20]
  0.23749058343491447
# ---
# name: TestOTFHelper.test_coherence_diameter[1.0-z_path2-cn22]
  0.15668535178821988
# ---
# name: TestOTFHelper.test_coherence_diameter[1.0-z_path3-cn23]
  0.17546491199555045
# ---
# name: TestOTFHelper.test_coherence_diameter[2.0-z_path1-cn21]
  0.5456100850379447
# ---
# name: TestOTFHelper.test_dark_current_from_density[0.0-2.0-1.0]
  0.0
# ---
# name: TestOTFHelper.test_dark_current_from_density[1.0-1.0-2.0]
  1.2483018257999544e+19
# ---
# name: TestOTFHelper.test_dark_current_from_density[1.0-2.0-1.0]
  1.2483018257999544e+19
# ---
# name: TestOTFHelper.test_dark_current_from_density[10.0-0.0-1.0]
  0.0
# ---
# name: TestOTFHelper.test_dark_current_from_density[10.0-2.0-0.0]
  0.0
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h0-1.0-0.0]
  array([2.6982006e-16])
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h1-0.0-1.0]
  array([0.99004983])
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h2-1.0-1.0]
  array([1.])
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h3-1.0-1.0]
  array([0.99004983])
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h4--1.0--1.0]
  array([-1.01005017])
# ---
# name: TestOTFHelper.test_hufnagel_valley_turbulence_profile[h5-1.0-0.0]
  array([2.6982006e-16, 2.6982006e-16])
# ---
# name: TestOTFHelper.test_image_domain_defocus_radii[0.0-2.0-1.0]
  0.0
# ---
# name: TestOTFHelper.test_image_domain_defocus_radii[10.0-0.0-1.0]
  0.0
# ---
# name: TestOTFHelper.test_image_domain_defocus_radii[10.0-1.0-2.0]
  1.55
# ---
# name: TestOTFHelper.test_image_domain_defocus_radii[10.0-2.0-1.0]
  12.4
# ---
# name: TestOTFHelper.test_object_domain_radii[0.0-2.0-1.0]
  -0.0
# ---
# name: TestOTFHelper.test_object_domain_radii[10.0-1.0-1.0]
  0.0
# ---
# name: TestOTFHelper.test_object_domain_radii[10.0-1.0-2.0]
  3.1
# ---
# name: TestOTFHelper.test_object_domain_radii[10.0-2.0-1.0]
  -3.1
# ---
# name: TestOTFHelper.test_weighted_by_wavelength[wavelengths0-weights0-<lambda>]
  0.0
# ---
# name: TestOTFHelper.test_weighted_by_wavelength[wavelengths1-weights1-<lambda>]
  1.0
# ---
# name: TestOTFHelper.test_weighted_by_wavelength[wavelengths2-weights2-<lambda>]
  0.3333333333333333
# ---
# name: TestOTFHelper.test_weighted_by_wavelength[wavelengths3-weights3-<lambda>]
  array([1.66666667])
# ---
# name: TestOTFHelper.test_weighted_by_wavelength[wavelengths4-weights4-<lambda>]
  array([3.33333333])
# ---
# name: TestOTFToPSF.test_otf_to_psf[otf_value0-1.0-1.0]
  array([[1.]])
# ---
# name: TestOTFToPSF.test_otf_to_psf[otf_value1-1.0-1.0]
  array([[1.]])
# ---
# name: TestPolychromaticTurbulenceOTF.test[u0-v0-wavelengths0-weights0-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.74665601e-09]),
    0.3340840371124818,
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u1-v1-wavelengths1-weights1-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.74665601e-09, 2.04824797e-17]),
    0.3340840371124818,
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u2-v2-wavelengths2-weights2-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.57584742e-05]),
    array([0.62304372]),
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u3-v3-wavelengths3-weights3-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([9.15552002e-10]),
    0.11136134570416059,
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u4-v4-wavelengths4-weights4-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.57584742e-05, 5.10998239e-06]),
    array([0.62304372]),
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u5-v5-wavelengths5-weights5-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.57584742e-05, 1.95347951e-06]),
    array([0.62304372]),
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u6-v6-wavelengths6-weights6-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  tuple(
    array([2.57584742e-05, 1.95347951e-06]),
    array([0.62304372]),
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test[u7-v7-wavelengths7-weights7-2.0-2.0-2.0-2.0-2.0-2.0-2.0]
  tuple(
    array([4.59610705e-49]),
    0.14605390401093207,
  )
# ---
# name: TestPolychromaticTurbulenceOTF.test_first_array_empty[u0-v0-wavelengths0-weights0-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  0.33408403711248175
# ---
# name: TestPolychromaticTurbulenceOTF.test_first_array_empty[u1-v1-wavelengths1-weights1-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  0.33408403711248175
# ---
# name: TestPolychromaticTurbulenceOTF.test_first_array_empty[u2-v2-wavelengths2-weights2-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  0.33408403711248175
# ---
# name: TestPolychromaticTurbulenceOTF.test_first_array_empty[u3-v3-wavelengths3-weights3-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  0.7675235677237523
# ---
# name: TestPolychromaticTurbulenceOTF.test_first_array_empty[u4-v4-wavelengths4-weights4-1.0-1.0-1.0-1.0-1.0-1.0-1.0]
  array([0.62304372])
# ---
# name: TestResample2D.test_resample_2d[img_in0-1.0-1.0]
  array([[1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.],
         [1., 1., 1., 1., 1.]])
# ---
# name: TestSliceOTF.test[otf_input0-0.0]
  array([[1.]])
# ---
# name: TestSliceOTF.test[otf_input1-10.0]
  array([[0.5]])
# ---
# name: TestSliceOTF.test[otf_input2-180.0]
  array([[0.5]])
# ---
# name: TestSliceOTF.test[otf_input3-360.0]
  array([[1.]])
# ---
# name: TestTdiOTF.test[u_or_v0-1000.0-0.5-1.0-30-1000.0]
  array([1.99634659+0.j])
# ---
# name: TestTdiOTF.test[u_or_v1-20.0-20.0-10.0-1-20.0]
  array([3.89817183e-17+0.j])
# ---
# name: TestTdiOTF.test[u_or_v2-10.0-10.0-10.0-10-10.0]
  array([1.28752754e-15+4.58661209e-16j, 1.28752754e-15+4.58661209e-16j])
# ---
# name: TestTurbulenceOTF.test[u0-v0-1.0-1.0-0.0-0.0]
  array([0.])
# ---
# name: TestTurbulenceOTF.test[u1-v1-0.0-1.0-1.0-1.0]
  array([1.])
# ---
# name: TestTurbulenceOTF.test[u2-v2-0.0-1.0-1.0-0.0]
  array([1.])
# ---
# name: TestTurbulenceOTF.test[u3-v3-1.0-1.0-1.0-1.0]
  array([2.11830623, 2.11830623])
# ---
# name: TestWavefrontOTF.test[u0-v0-1.0-0.0-0.0-0.0]
  array([1.])
# ---
# name: TestWavefrontOTF.test[u1-v1-1.0-1.0-0.0-0.0]
  array([0.36787944])
# ---
# name: TestWavefrontOTF.test[u2-v2-1.0-0.0-1.0-0.0]
  array([1.])
# ---
# name: TestWavefrontOTF.test[u3-v3-1.0-0.0-0.0-1.0]
  array([1.])
# ---
# name: TestWavefrontOTF.test[u4-v4-1.0-1.0-1.0-0.0]
  array([0.36787944])
# ---
# name: TestWavefrontOTF.test[u5-v5-1.0-1.0-0.0-1.0]
  array([0.36787944])
# ---
# name: TestWavefrontOTF.test[u6-v6-1.0-0.0-1.0-1.0]
  array([1.])
# ---
# name: TestWavefrontOTF.test[u7-v7-0.0-1.0-1.0-1.0]
  array([1.])
# ---
# name: TestWavefrontOTF.test[u8-v8-1.0-1.0-1.0-1.0]
  array([0.42119275, 0.42119275])
# ---
# name: TestWavefrontOTF2.test[u0-v0-1.0-0.0]
  array([1.])
# ---
# name: TestWavefrontOTF2.test[u1-v1-1.0-1.0]
  array([73.31931329])
# ---
# name: TestWavefrontOTF2.test[u2-v2-1.0-1.0]
  array([73.31931329, 73.31931329])
# ---
# name: TestWindSpeedTurbulenceOTF.test[u0-v0-0.0-1.0-1.0-0.0-0.0]
  array([1.])
# ---
# name: TestWindSpeedTurbulenceOTF.test[u1-v1-0.0-1.0-1.0-1.0-0.0]
  array([1.])
# ---
# name: TestWindSpeedTurbulenceOTF.test[u2-v2-1.0-1.0-1.0-1.0-1.0]
  array([0.02636412, 0.02636412])
# ---
